styles/styles.css
/* Document styles */

body {
    font-family: 'Open Sans', sans-serif;
}

body h1 {
    font-family: 'Permanent Marker', cursive;
}

h2.bigger {
    font-family: 'Permanent Marker', cursive;
    font-size: 2.4rem;
    width: 80%;
}

.marker {
    font-family: 'Permanent Marker', cursive;
}

p {
    margin-top: 3rem;
}

/* Navbar */

.my-navbar {
    background-color: white;
}

/* Header stage parallax */

.header-parallax {
    height: 600px;
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(../assets/img/loft-narrow.jpg);
}

/* Header scroll down button */

@keyframes bounce {
    0%, 5%, 12.5%, 20%, 25% {transform: translateY(0);} 
    10% {transform: translateY(-30px);} 
    15% {transform: translateY(-15px);} 
 } 

#btn1 {
    position: absolute;
    left: 50%;
    bottom: 0;
    margin-left: -2em;
    -webkit-animation-duration: 4s;
    animation-duration: 4s;
    animation-name: bounce;
    animation-iteration-count: infinite;
    cursor: pointer;
}

/* Hero stage parallax */

section {
    position: relative;
    width: 100%;
    background-attachment: fixed;
    height: 400px;
}

.stage {
    display: flex;
    align-items: center;
    height: 100%;
}

.stage h1 {
    font-size: 50px;
    width: 70%;
}

.stage p {
    font-size: 20px;
    font-weight: medium;
    max-width: 50%;
    margin: 0;
}

/* Hero images */

.image-stage {
    height: 500px;
    overflow: hidden;
    display: flex;
    align-items: flex-end;
}

.parallax {
    height: auto;
    width: 100%;
    background-size: cover;
    background-repeat: no-repeat;
}

/* Copy stages */

.copy-stage {
    background-color: white;
    margin: 200px 0;
}

.copy-stage img {
    width: 150px;
    padding-right: 20px;
}

/* Icons on stages */

img.icon-right {
    width: 30%;
    position: absolute;
    top: -100px;
    right: -170px;
}

img.icon-left {
    width: 30%;
    position: absolute;
    top: -100px;
    left: -170px;
}

/* Colored stage for copy, aligned left */

.color-stage-left {
    width: 60%;
    padding: 80px 5px 0 100px;
    margin: 50px auto 0 auto;
    position: relative;
}

.color-stage-left h2 {
    position: absolute;
    top: -40px;
    left: -50px;
}

.fat-line-vertical-left {
    height: 70%;
    width: 5px;
    position: absolute;
    left: -50px;
    bottom: 0;
}

.fat-line-horizontal-left {
    height: 5px;
    width: 20%;
    position: absolute;
    right: -150px;
    bottom: 0;
}

/* Colored stage for copy, aligned right */

.color-stage-right {
    width: 60%;
    padding: 80px 100px 0 5px;
    margin: 50px auto 0 auto;
    position: relative;
}

.color-stage-right h2 {
    position: absolute;
    top: -40px;
    right: -80px;
}

.fat-line-vertical-right {
    height: 70%;
    width: 5px;
    position: absolute;
    right: -80px;
    bottom: 0;
}

.fat-line-horizontal-right {
    height: 5px;
    width: 20%;
    position: absolute;
    left: -150px;
    bottom: 0;
}

/* Do not display mobile stage on desktop */

.mobile-stage {
    display: none;
}

/* Stage colors */

.stage-pink {
    background-color: #EFA595;
}

.stage-blue {
    background-color: #B6DDE0;
}

.stage-brown {
    background-color: #E9D9B0;
}

/* Footer */

footer {
    width: 100%;
    background-color: #4a4a4a;
    color: white;
    text-align: center;
}

.footer p {
    margin-top: 0;
    margin-bottom: 0;
    padding: 30px 0 0 0;
}

/* Disclaimer */

.popover-body {
    font-family: 'Open Sans', sans-serif;
}

.btn-secondary {
    color: #fff;
    background-color: #4a4a4a;
    border-color: #4a4a4a;
    margin-bottom: 30px;
}

/* Media queries */

@media only screen and (max-width: 1000px) {
    /* Copy stage */

    h2.bigger {
        width: 100%;
    }
}

@media only screen and (max-width: 785px) {
    /* Hero stage */
    
    .stage h1 {
        width: 100%;
    }

    .stage p {
        max-width: 100%;
    }

    /* Copy stage */

    h2.bigger {
        width: 100%;
    }

    .copy-stage {
        margin: 100px 0;
    }

    .image-stage {
        height: 200px;
    }

    .stage-pink, .stage-blue, .stage-brown {
        background-color: white;
    }

    .color-stage-right, .color-stage-left {
        width: 80%;
        padding: 0;
        margin: 0 20px;
        position: relative;
    }

    .color-stage-left h2, .color-stage-right h2 {
        position: static;
        margin-bottom: 30px;
    }

    /* Non-animated icons on mobile */

    img.icon-left, img.icon-right {
        position: relative;
        margin-left: 60%;
        width: 40%;
        top: 0;
        left: 0;
        right: 0;
    }

    .copy-stage img {
        padding-right: 0;
    }

    /* Do not display fat lines on mobile */

    .fat-line-vertical-right, .fat-line-horizontal-right, 
    .fat-line-vertical-left, .fat-line-horizontal-left {
      display: none;
    }

    /* Replace fat lines with small square on mobile */

    .mobile-stage {
        width: 60%;
        height: 40px;
        position: absolute;
        bottom: -10px;
        right: -10px;
        display: block;
    }

    .mobile-pink {
        background-color: #EFA595;
    }
    
    .mobile-blue {
        background-color: #B6DDE0;
    }
    
    .mobile-brown {
        background-color: #E9D9B0;
    }
  }

